# financial_project

./: .coverage  .coveragerc  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  README.md  eslint.config.mjs  my.patch  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts
apps/web/app/: globals.css  head.tsx  layout.tsx  page.tsx
apps/web/lib/: api.ts  i18n.ts  watchlist.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  index.css  main.tsx
backend/: alembic.ini  main.py
backend/app/: db.py  main.py
backend/migrations/: env.py
backend/models/: analysis.py
backend/routes/: analysis.py  lookup.py  market.py  metrics.py  portfolio.py
backend/tests/: test_broadcast.py  test_search.py
data/: corp_code_list.csv  krx_listed_backup.csv  recent_companies.json  watchlist.json
frontend/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: check_api_field_usage.sh  join_unused_fields.cjs  list_api_fields.py  refresh_aggregates.py  scan_frontend_usage.js  scan_frontend_usage.ts  seed_companies.py  unused_api_fields_allowlist.txt
seeds/: screeners.json  seed_companies_kr_en.json  starter_watchlists.json
services/: starter_watchlists.json
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/models/: analysis.py
services/api/app/routes/: analysis.py  lookup.py  market.py  metrics.py  portfolio.py
services/api/financial_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/mojo_worker/: server.py
(+53 files in other folders)
