[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-project"
version = "0.1.0"
requires-python = ">=3.11"
  dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "rapidfuzz>=3.1",
    "financial-core @ file:///C:/workspace/kiwoom-python/financial_project/packages/core",
  ]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"