[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "financial-core @ file:///${PROJECT_ROOT}/packages/core"
]

[tool.setuptools]
packages = ["app"]
include-package-data = true